--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "url": "https://github.com/alexmingoia/pux-starter-app/issues"
   },
   "dependencies": {
-    "purescript": "next",
+    "purescript": "^0.8.5",
     "r-dom": "^2.2.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
@@ -41,7 +41,7 @@
     "http-server": "^0.9.0",
     "purescript-psa": "^0.3.5",
     "purescript-webpack-plugin": "^0.3.0",
-    "purs-loader": "^0.6.0",
+    "purs-loader": "^1.0.0-rc.1",
     "rimraf": "^2.5.2",
     "source-map-loader": "^0.1.5",
     "webpack": "^1.12.14",
